src/test/ui/parser/associated-types-project-from-hrtb-explicit.stderr
error: expected identifier, found keyword `for`
  --> $DIR/associated-types-project-from-hrtb-explicit.rs:12:21
   |
LL | fn foo2<I>(x: <I as for<'x> Foo<&'x isize>>::A)
   |                     ^^^ expected identifier, found keyword

error: expected one of `::` or `>`, found `Foo`
  --> $DIR/associated-types-project-from-hrtb-explicit.rs:12:29
   |
LL | fn foo2<I>(x: <I as for<'x> Foo<&'x isize>>::A)
   |                             ^^^ expected one of `::` or `>` here

error: aborting due to 2 previous errors

